diseño movil - fin de la programacion del menu

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <h1 id=”logo” title="Insure">
       <img src="images/logo.svg" alt="Logotipo Insure" />
     </h1>
-    <img src="./images/icon-hamburger.svg" alt="Menú" class="icon-menu">
-    <nav class="nav">
+    <img id="menu" src="./images/icon-hamburger.svg" alt="Menú" class="icon-menu menu-open">
+    <nav id="nav" class="nav-deactive">
       <ul class="menu__list">
         <li class="list__item"><a href="#" class="link">How we work</a></li>
         <li class="list__item"><a href="#" class="link">Blog</a></li>
@@ -91,5 +91,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+  <script src="app.js"></script>
 </body>
 </html>
