terminando header__info

--- a/index.html
+++ b/index.html
@@ -26,11 +26,18 @@
         <li class="list__item"><a href="#" class="link">View plans</a></li>
       </ul>
     </nav>
-    <picture>
+    <picture class="picture">
       <source media="(max-width: 375px)" srcset="images/image-intro-mobile.jpg">
       <source media="(min-width: 475px)" srcset="images/image-intro-desktop.jpg">
         <img class="image" src="./images/image-intro-desktop.jpg" alt="">
     </picture>
+    <div class="header-info">
+      <h2 class="header__subtitle">Humanizing your insurance.</h2>
+      <p class="header__text">Get your life insurance coverage easier and faster. We blend our expertise 
+        and technology to help you find the plan that’s right for you. Ensure you 
+        and your loved ones are protected.</p>
+        <a class="header__btn" href="#" class="header__button">View plans</a>
+    </div>
   </header>
 
   
@@ -38,13 +45,11 @@
   
   
 
-  Humanizing your insurance.
+  
 
-  Get your life insurance coverage easier and faster. We blend our expertise 
-  and technology to help you find the plan that’s right for you. Ensure you 
-  and your loved ones are protected.
+  
 
-  View plans
+  
 
   We’re different
 
