comienzo de main

--- a/index.html
+++ b/index.html
@@ -38,7 +38,24 @@
         and your loved ones are protected.</p>
         <a class="header__btn" href="#" class="header__button">View plans</a>
     </div>
+    <picture>
+      <source media="(max-width: 470px)" srcset="./images/bg-pattern-intro-right-mobile.svg">
+      <img class="image-2" src="./images/bg-pattern-intro-right-desktop.svg" alt="">
+    </picture>
   </header>
+  <main class="main">
+    <hr class="line">
+
+    <article class="article">
+      <h2 class="article__subtitle">We’re different</h2>
+      <section class="article-section">
+        <img src="./images/icon-snappy-process.svg" alt="Snappy Process">
+        <h3 class="section__subtitle">Snappy Process</h3>
+        <p class="section__text">Our application process can be completed in minutes, not hours. Don’t get 
+          stuck filling in tedious forms.</p>
+      </section>
+    </article>
+  </main>
 
   
   
@@ -51,12 +68,11 @@
 
   
 
-  We’re different
+  
 
-  Snappy Process
+  
 
-  Our application process can be completed in minutes, not hours. Don’t get 
-  stuck filling in tedious forms.
+  
 
   Affordable Prices
 
