--- a/index.html
+++ b/index.html
@@ -45,14 +45,29 @@
   </header>
   <main class="main">
     <hr class="line">
-
     <article class="article">
       <h2 class="article__subtitle">We’re different</h2>
       <section class="article-section">
-        <img src="./images/icon-snappy-process.svg" alt="Snappy Process">
+        <img class="section__img" src="./images/icon-snappy-process.svg" alt="Snappy Process">
         <h3 class="section__subtitle">Snappy Process</h3>
         <p class="section__text">Our application process can be completed in minutes, not hours. Don’t get 
           stuck filling in tedious forms.</p>
+      </section>
+      <section class="article-section">
+        <img class="section__img" src="./images/icon-affordable-prices.svg" alt="Snappy Process">
+        <h3 class="section__subtitle">Affordable Prices</h3>
+        <p class="section__text">We don’t want you worrying about high monthly costs. Our prices may be low, 
+          but we still offer the best coverage possible.</p>
+      </section>
+      <section class="article-section">
+        <img class="section__img" src="./images/icon-people-first.svg" alt="Snappy Process">
+        <h3 class="section__subtitle">People First</h3>
+        <p class="section__text">Our plans aren’t full of conditions and clauses to prevent payouts. We make 
+          sure you’re covered when you need it.</p>
+      </section>
+      <section class="section-info">
+        <h3 class="section-info__subtitle">Find out more about how we work</h3>
+        <a href="#" class="info__link">How we work</a>
       </section>
     </article>
   </main>
@@ -74,19 +89,17 @@
 
   
 
-  Affordable Prices
+  
 
-  We don’t want you worrying about high monthly costs. Our prices may be low, 
-  but we still offer the best coverage possible.
+  
 
-  People First
+  
 
-  Our plans aren’t full of conditions and clauses to prevent payouts. We make 
-  sure you’re covered when you need it.
+  
 
-  Find out more about how we work
+  
 
-  How we work
+  
 
   Our company
 
