--- a/index.html
+++ b/index.html
@@ -71,67 +71,44 @@
       </section>
     </article>
   </main>
-
-  
-  
-  
-  
-
-  
-
-  
-
-  
-
-  
-
-  
-
-  
-
-  
-
-  
-
-  
-
-  
-
-  
-
-  
-
-  Our company
-
-  How we work
-  Why Insure?
-  View plans
-  Reviews
-
-  Help me
-
-  FAQ
-  Terms of use
-  Privacy policy
-  Cookies
-
-  Contact
-
-  Sales
-  Support
-  Live chat
-
-  Others
-
-  Careers
-  Press
-  Licenses
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <footer class="footer">
+    <h2 class="footer__title" id=”logo” title="Insure">
+      <img src="images/logo.svg" alt="Logotipo Insure" />
+    </h2>
+    <div class="footer-icons">
+      <img class="footer__icon" src="./images/icon-facebook.svg" alt="Facebook">
+      <img class="footer__icon" src="./images/icon-twitter.svg" alt="Twitter">
+      <img class="footer__icon" src="./images/icon-pinterest.svg" alt="Pinteres">
+      <img class="footer__icon" src="./images/icon-instagram.svg" alt="Instagram">
+    </div>
+    <hr class="footer__line">
+    <div class="footer-links">
+      <h3 class="footer__subtitle">Our company</h3>
+      <a href="#" class="footer__link">How we work</a>
+      <a href="#" class="footer__link">Why Insure?</a>
+      <a href="#" class="footer__link">View plans</a>
+      <a href="#" class="footer__link">Reviews</a>
+    </div>
+    <div class="footer-links">
+      <h3 class="footer__subtitle">Help me</h3>
+      <a href="#" class="footer__link">FAQ</a>
+      <a href="#" class="footer__link">Terms of use</a>
+      <a href="#" class="footer__link">Privacy policy</a>
+      <a href="#" class="footer__link">Cookies</a>
+    </div>
+    <div class="footer-links">
+      <h3 class="footer__subtitle">Contact</h3>
+      <a href="#" class="footer__link">Sales</a>
+      <a href="#" class="footer__link">Support</a>
+      <a href="#" class="footer__link">Live chat</a>
+    </div>
+    <div class="footer-links">
+      <h3 class="footer__subtitle">Others</h3>
+      <a href="#" class="footer__link">Careers</a>
+      <a href="#" class="footer__link">Press</a>
+      <a href="#" class="footer__link">Licenses</a>
+    </div>
+  </footer>
   <script src="app.js"></script>
 </body>
 </html>
