--- a/index.html
+++ b/index.html
@@ -28,20 +28,24 @@
         </ul>
       </nav>
     </div>
-    <picture class="picture">
-      <source media="(max-width: 375px)" srcset="images/image-intro-mobile.jpg">
-      <source media="(min-width: 475px)" srcset="images/image-intro-desktop.jpg">
-        <img class="image" src="./images/image-intro-desktop.jpg" alt="">
-    </picture>
-    <div class="header-info">
-      <h2 class="header__subtitle">Humanizing your insurance.</h2>
-      <p class="header__text">Get your life insurance coverage easier and faster. We blend our expertise 
-        and technology to help you find the plan that’s right for you. Ensure you 
-        and your loved ones are protected.</p>
-        <a class="header__btn" href="#" class="header__button">View plans</a>
+    <div class="header-container-info">
+      <picture class="picture">
+        <source media="(max-width: 375px)" srcset="images/image-intro-mobile.jpg">
+        <source media="(min-width: 475px)" srcset="images/image-intro-desktop.jpg">
+          <img class="image" src="./images/image-intro-desktop.jpg" alt="">
+      </picture>
+      <div class="header-info">
+        <hr class="info__line">
+        <h2 class="header__subtitle">Humanizing your insurance.</h2>
+        <p class="header__text">Get your life insurance coverage easier and faster. We blend our expertise 
+          and technology to help you find the plan that’s right for you. Ensure you 
+          and your loved ones are protected.</p>
+          <a class="header__btn" href="#" class="header__button">View plans</a>
+      </div>
     </div>
     <picture>
-      <source media="(max-width: 470px)" srcset="./images/bg-pattern-intro-right-mobile.svg">
+      <source media="(max-width: 470px)" srcset="images/bg-pattern-intro-right-mobile.svg">
+        <source media="(min-width: 1000px)" srcset="images/bg-pattern-intro-right-desktop.svg">
       <img class="image-2" src="./images/bg-pattern-intro-right-desktop.svg" alt="">
     </picture>
   </header>
